# ToT-TPDS25

./: CMakeLists.txt  README.md
apps/: CMakeLists.txt  tot.cu
tot/: CMakeLists.txt  tot.h
tot/common/: arithmetic.h  constants.h  macros.h  memory.h  types.h
tot/formats/: bitcoo.h  bitcsr.h  coo.h  csr.h
tot/operations/: convert.h  kernel.h  triangle_count.h  triangle_count_cpu.h
tot/utils/: csr_helpers.h  functors.h  option.h  timer.h
tot/utils/io/: read.h
